--- a/index.html
+++ b/index.html
@@ -2,84 +2,198 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Travbuddies Travel List</title>
-  <link rel="stylesheet" href="styles.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body, html {
+      height: 100%;
+    }
+    .header-banner {
+      background: linear-gradient(90deg, #0072ff, #00c6ff);
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+    .footer-fixed {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: #f8f9fa;
+      text-align: center;
+      padding: 0.5rem;
+      font-size: 0.9rem;
+      border-top: 1px solid #dee2e6;
+    }
+    .admin-only, .traveler-only {
+      display: none;
+    }
+    .error {
+      border: 1px solid red;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <div class="header-banner">
-      <h1>Travel Planning Made Simple</h1>
-      <p>Organize trips effortlessly with Travbuddies. Manage group travel plans with ease and clarity.</p>
-      <div class="menu-buttons">
-        <button onclick="showLoginForm('admin')">Admin Login</button>
-        <button onclick="showLoginForm('traveler')">Traveler Login</button>
-        <button onclick="logout()">Logout</button>
+
+  <!-- Header -->
+  <div class="header-banner">
+    <h2>Travel Planning Made Simple</h2>
+    <p>Organize trips effortlessly with Travbuddies. Manage group travel plans with ease and clarity.</p>
+  </div>
+
+  <!-- Login Section -->
+  <div class="container my-4">
+    <div class="row justify-content-center">
+      <div class="col-md-4">
+        <h4>Login</h4>
+        <input type="text" id="username" placeholder="Username" class="form-control mb-2" />
+        <input type="password" id="password" placeholder="Password" class="form-control mb-2" />
+        <button class="btn btn-primary w-100" onclick="login()">Login</button>
+        <button class="btn btn-secondary w-100 mt-2" onclick="logout()">Logout</button>
+        <p id="roleDisplay" class="text-center mt-2 text-muted"></p>
       </div>
     </div>
-  </header>
+  </div>
 
-  <main>
-    <div id="login-form" class="login-form">
-      <h2 id="login-title">Login</h2>
-      <input type="text" id="username" placeholder="Username" />
-      <input type="password" id="password" placeholder="Password" />
-      <button onclick="login()">Login</button>
-    </div>
+  <!-- Traveler Input Form -->
+  <div class="container traveler-only my-4">
+    <h4>Add Your Travel Plan</h4>
+    <form id="travelForm" onsubmit="addEntry(event)">
+      <div class="row">
+        <div class="col-md-4 mb-2">
+          <input type="date" class="form-control" id="startDate" required />
+        </div>
+        <div class="col-md-4 mb-2">
+          <input type="date" class="form-control" id="endDate" required />
+        </div>
+        <div class="col-md-4 mb-2">
+          <input type="text" class="form-control" id="destination" placeholder="Destination" required />
+        </div>
+        <div class="col-md-6 mb-2">
+          <input type="text" class="form-control" id="travelerName" placeholder="Traveler Name" required />
+        </div>
+        <div class="col-md-6 mb-2">
+          <button type="submit" class="btn btn-success w-100">Add Entry</button>
+        </div>
+      </div>
+    </form>
+  </div>
 
-    <div id="form-section" class="hidden">
-      <!-- Form for traveler/admin -->
-      <h2>Submit Your Travel Plan</h2>
-      <!-- Form fields go here -->
-    </div>
+  <!-- Destination Filter -->
+  <div class="container mb-3">
+    <input type="text" class="form-control" id="filterDestination" placeholder="Filter by Destination..." onkeyup="renderTable()" />
+  </div>
 
-    <div id="table-section">
-      <h2>Travbuddies Travel List</h2>
-      <table id="travel-table">
-        <!-- Table goes here -->
-      </table>
-    </div>
-  </main>
+  <!-- Travel Table -->
+  <div class="container mb-5">
+    <h4>Travel List</h4>
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th onclick="sortTable('startDate')">Start Date</th>
+          <th onclick="sortTable('endDate')">End Date</th>
+          <th onclick="sortTable('destination')">Destination</th>
+          <th onclick="sortTable('traveler')">Traveler</th>
+          <th class="admin-only">Actions</th>
+        </tr>
+      </thead>
+      <tbody id="travelTableBody"></tbody>
+    </table>
+  </div>
 
-  <footer>
-    Travbuddies’ Travel List © 2025 | Organized by SGTREK | Live A Life With Passion
-    <br />
-    Contact: contact@sgtrek.com | WhatsApp: +65 9270 0908
-  </footer>
+  <!-- Footer -->
+  <div class="footer-fixed">
+    Travbuddies’ Travel List © 2025 | Organized by SGTREK | Live A Life With Passion | Contact: contact@sgtrek.com | WhatsApp: +65 9270 0908
+  </div>
 
   <script>
-    const ADMIN_HASH = "21232f297a57a5a743894a0e4a801fc3"; // md5("admin")
-    const TRAVELER_HASH = "ee11cbb19052e40b07aac0ca060c23ee"; // md5("traveler")
+    let travelData = JSON.parse(localStorage.getItem("travelData") || "[]");
     let currentUserRole = null;
 
-    function showLoginForm(role) {
-      document.getElementById('login-form').style.display = 'block';
-      document.getElementById('login-title').textContent = `${role.charAt(0).toUpperCase() + role.slice(1)} Login`;
-      document.getElementById('login-form').dataset.role = role;
-    }
-
     function login() {
-      const role = document.getElementById('login-form').dataset.role;
-      const password = document.getElementById('password').value;
-      const hashed = CryptoJS.MD5(password).toString();
+      const user = document.getElementById("username").value.trim();
+      const pass = document.getElementById("password").value.trim();
 
-      if ((role === 'admin' && hashed === ADMIN_HASH) || (role === 'traveler' && hashed === TRAVELER_HASH)) {
-        currentUserRole = role;
-        alert(`${role.charAt(0).toUpperCase() + role.slice(1)} logged in successfully.`);
-        document.getElementById('login-form').style.display = 'none';
-        document.getElementById('form-section').classList.remove('hidden');
-        // Enable edit/delete for admin, disable for traveler
+      if (user === "admin" && pass === "admin123") {
+        currentUserRole = "admin";
+      } else if (user === "traveler" && pass === "travel123") {
+        currentUserRole = "traveler";
       } else {
-        alert('Invalid credentials.');
+        alert("Invalid credentials!");
+        return;
       }
+      localStorage.setItem("userRole", currentUserRole);
+      updateUI();
     }
 
     function logout() {
       currentUserRole = null;
-      document.getElementById('form-section').classList.add('hidden');
-      alert('Logged out.');
+      localStorage.removeItem("userRole");
+      updateUI();
     }
+
+    function updateUI() {
+      currentUserRole = localStorage.getItem("userRole");
+      document.querySelectorAll('.admin-only').forEach(el => el.style.display = currentUserRole === "admin" ? "table-cell" : "none");
+      document.querySelectorAll('.traveler-only').forEach(el => el.style.display = currentUserRole === "admin" || currentUserRole === "traveler" ? "block" : "none");
+      document.getElementById("roleDisplay").innerText = currentUserRole ? `Logged in as: ${currentUserRole}` : "Not logged in";
+      renderTable();
+    }
+
+    function addEntry(event) {
+      event.preventDefault();
+      const startDate = document.getElementById("startDate").value;
+      const endDate = document.getElementById("endDate").value;
+      const destination = document.getElementById("destination").value.trim();
+      const traveler = document.getElementById("travelerName").value.trim();
+
+      if (new Date(endDate) < new Date(startDate)) {
+        alert("End date must be after start date");
+        return;
+      }
+
+      travelData.push({ startDate, endDate, destination, traveler });
+      localStorage.setItem("travelData", JSON.stringify(travelData));
+      document.getElementById("travelForm").reset();
+      renderTable();
+    }
+
+    function deleteEntry(index) {
+      if (confirm("Delete this entry?")) {
+        travelData.splice(index, 1);
+        localStorage.setItem("travelData", JSON.stringify(travelData));
+        renderTable();
+      }
+    }
+
+    function renderTable() {
+      const filter = document.getElementById("filterDestination").value.trim().toLowerCase();
+      let sortedData = [...travelData].sort((a, b) => new Date(a.startDate) - new Date(b.startDate));
+      const tbody = document.getElementById("travelTableBody");
+      tbody.innerHTML = "";
+
+      sortedData.forEach((entry, index) => {
+        if (filter && !entry.destination.toLowerCase().includes(filter)) return;
+        const row = document.createElement("tr");
+        row.innerHTML = `
+          <td>${entry.startDate}</td>
+          <td>${entry.endDate}</td>
+          <td>${entry.destination}</td>
+          <td>${entry.traveler}</td>
+          ${currentUserRole === "admin" ? `<td><button class="btn btn-sm btn-danger" onclick="deleteEntry(${index})">Delete</button></td>` : ''}
+        `;
+        tbody.appendChild(row);
+      });
+    }
+
+    function sortTable(key) {
+      travelData.sort((a, b) => a[key].localeCompare(b[key]));
+      localStorage.setItem("travelData", JSON.stringify(travelData));
+      renderTable();
+    }
+
+    window.onload = updateUI;
   </script>
 </body>
 </html>
