--- a/index.html
+++ b/index.html
@@ -4,196 +4,62 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Travbuddies Travel List</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body, html {
-      height: 100%;
-    }
-    .header-banner {
-      background: linear-gradient(90deg, #0072ff, #00c6ff);
-      color: white;
-      padding: 1rem;
-      text-align: center;
-    }
-    .footer-fixed {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background: #f8f9fa;
-      text-align: center;
-      padding: 0.5rem;
-      font-size: 0.9rem;
-      border-top: 1px solid #dee2e6;
-    }
-    .admin-only, .traveler-only {
-      display: none;
-    }
-    .error {
-      border: 1px solid red;
-    }
-  </style>
+  <script type="module" src="main.js" defer></script>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <header>
+    <h1>Travel Planning Made Simple</h1>
+    <nav>
+      <button onclick="showLogin()">Login</button>
+      <button onclick="showRegister()">Register</button>
+    </nav>
+  </header>
 
-  <!-- Header -->
-  <div class="header-banner">
-    <h2>Travel Planning Made Simple</h2>
-    <p>Organize trips effortlessly with Travbuddies. Manage group travel plans with ease and clarity.</p>
-  </div>
+  <main id="app">
+    <section id="login-section" class="hidden">
+      <h2>Login</h2>
+      <input type="email" id="login-email" placeholder="Email" />
+      <input type="password" id="login-password" placeholder="Password" />
+      <button onclick="login()">Login</button>
+    </section>
 
-  <!-- Login Section -->
-  <div class="container my-4">
-    <div class="row justify-content-center">
-      <div class="col-md-4">
-        <h4>Login</h4>
-        <input type="text" id="username" placeholder="Username" class="form-control mb-2" />
-        <input type="password" id="password" placeholder="Password" class="form-control mb-2" />
-        <button class="btn btn-primary w-100" onclick="login()">Login</button>
-        <button class="btn btn-secondary w-100 mt-2" onclick="logout()">Logout</button>
-        <p id="roleDisplay" class="text-center mt-2 text-muted"></p>
-      </div>
-    </div>
-  </div>
+    <section id="register-section" class="hidden">
+      <h2>Register</h2>
+      <input type="email" id="register-email" placeholder="Email" />
+      <input type="password" id="register-password" placeholder="Password" />
+      <button onclick="register()">Register</button>
+    </section>
 
-  <!-- Traveler Input Form -->
-  <div class="container traveler-only my-4">
-    <h4>Add Your Travel Plan</h4>
-    <form id="travelForm" onsubmit="addEntry(event)">
-      <div class="row">
-        <div class="col-md-4 mb-2">
-          <input type="date" class="form-control" id="startDate" required />
-        </div>
-        <div class="col-md-4 mb-2">
-          <input type="date" class="form-control" id="endDate" required />
-        </div>
-        <div class="col-md-4 mb-2">
-          <input type="text" class="form-control" id="destination" placeholder="Destination" required />
-        </div>
-        <div class="col-md-6 mb-2">
-          <input type="text" class="form-control" id="travelerName" placeholder="Traveler Name" required />
-        </div>
-        <div class="col-md-6 mb-2">
-          <button type="submit" class="btn btn-success w-100">Add Entry</button>
-        </div>
-      </div>
-    </form>
-  </div>
+    <section id="form-section" class="hidden">
+      <h2>Travel Entry</h2>
+      <input type="date" id="start-date" />
+      <input type="date" id="end-date" />
+      <input type="text" id="destination" placeholder="Destination" />
+      <input type="text" id="traveler-name" placeholder="Traveler Name" />
+      <button onclick="submitEntry()">Submit</button>
+    </section>
 
-  <!-- Destination Filter -->
-  <div class="container mb-3">
-    <input type="text" class="form-control" id="filterDestination" placeholder="Filter by Destination..." onkeyup="renderTable()" />
-  </div>
+    <section id="public-table">
+      <h2>Travel List</h2>
+      <input type="text" id="filter-destination" placeholder="Filter by Destination" oninput="filterTable()" />
+      <table id="travel-table">
+        <thead>
+          <tr>
+            <th>Start Date</th>
+            <th>End Date</th>
+            <th>Destination</th>
+            <th>Traveler</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </section>
+  </main>
 
-  <!-- Travel Table -->
-  <div class="container mb-5">
-    <h4>Travel List</h4>
-    <table class="table table-bordered">
-      <thead>
-        <tr>
-          <th onclick="sortTable('startDate')">Start Date</th>
-          <th onclick="sortTable('endDate')">End Date</th>
-          <th onclick="sortTable('destination')">Destination</th>
-          <th onclick="sortTable('traveler')">Traveler</th>
-          <th class="admin-only">Actions</th>
-        </tr>
-      </thead>
-      <tbody id="travelTableBody"></tbody>
-    </table>
-  </div>
-
-  <!-- Footer -->
-  <div class="footer-fixed">
-    Travbuddies’ Travel List © 2025 | Organized by SGTREK | Live A Life With Passion | Contact: contact@sgtrek.com | WhatsApp: +65 9270 0908
-  </div>
-
-  <script>
-    let travelData = JSON.parse(localStorage.getItem("travelData") || "[]");
-    let currentUserRole = null;
-
-    function login() {
-      const user = document.getElementById("username").value.trim();
-      const pass = document.getElementById("password").value.trim();
-
-      if (user === "admin" && pass === "admin123") {
-        currentUserRole = "admin";
-      } else if (user === "traveler" && pass === "travel123") {
-        currentUserRole = "traveler";
-      } else {
-        alert("Invalid credentials!");
-        return;
-      }
-      localStorage.setItem("userRole", currentUserRole);
-      updateUI();
-    }
-
-    function logout() {
-      currentUserRole = null;
-      localStorage.removeItem("userRole");
-      updateUI();
-    }
-
-    function updateUI() {
-      currentUserRole = localStorage.getItem("userRole");
-      document.querySelectorAll('.admin-only').forEach(el => el.style.display = currentUserRole === "admin" ? "table-cell" : "none");
-      document.querySelectorAll('.traveler-only').forEach(el => el.style.display = currentUserRole === "admin" || currentUserRole === "traveler" ? "block" : "none");
-      document.getElementById("roleDisplay").innerText = currentUserRole ? `Logged in as: ${currentUserRole}` : "Not logged in";
-      renderTable();
-    }
-
-    function addEntry(event) {
-      event.preventDefault();
-      const startDate = document.getElementById("startDate").value;
-      const endDate = document.getElementById("endDate").value;
-      const destination = document.getElementById("destination").value.trim();
-      const traveler = document.getElementById("travelerName").value.trim();
-
-      if (new Date(endDate) < new Date(startDate)) {
-        alert("End date must be after start date");
-        return;
-      }
-
-      travelData.push({ startDate, endDate, destination, traveler });
-      localStorage.setItem("travelData", JSON.stringify(travelData));
-      document.getElementById("travelForm").reset();
-      renderTable();
-    }
-
-    function deleteEntry(index) {
-      if (confirm("Delete this entry?")) {
-        travelData.splice(index, 1);
-        localStorage.setItem("travelData", JSON.stringify(travelData));
-        renderTable();
-      }
-    }
-
-    function renderTable() {
-      const filter = document.getElementById("filterDestination").value.trim().toLowerCase();
-      let sortedData = [...travelData].sort((a, b) => new Date(a.startDate) - new Date(b.startDate));
-      const tbody = document.getElementById("travelTableBody");
-      tbody.innerHTML = "";
-
-      sortedData.forEach((entry, index) => {
-        if (filter && !entry.destination.toLowerCase().includes(filter)) return;
-        const row = document.createElement("tr");
-        row.innerHTML = `
-          <td>${entry.startDate}</td>
-          <td>${entry.endDate}</td>
-          <td>${entry.destination}</td>
-          <td>${entry.traveler}</td>
-          ${currentUserRole === "admin" ? `<td><button class="btn btn-sm btn-danger" onclick="deleteEntry(${index})">Delete</button></td>` : ''}
-        `;
-        tbody.appendChild(row);
-      });
-    }
-
-    function sortTable(key) {
-      travelData.sort((a, b) => a[key].localeCompare(b[key]));
-      localStorage.setItem("travelData", JSON.stringify(travelData));
-      renderTable();
-    }
-
-    window.onload = updateUI;
-  </script>
+  <footer>
+    Travbuddies’ Travel List © 2025 | Organized by SGTREK | Live A Life With Passion 
+    Contact: contact@sgtrek.com | WhatsApp: +65 9270 0908
+  </footer>
 </body>
 </html>
