--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <header>
     <h1>Travel Planning Made Simple</h1>
+    <p>Organize trips effortlessly with Travbuddies. Manage group travel plans with ease and clarity.</p>
     <nav>
       <button onclick="showLogin()">Login</button>
       <button onclick="showRegister()">Register</button>
